--- a/_posts/2025-06-17-folium.md
+++ b/_posts/2025-06-17-folium.md
@@ -12,7 +12,7 @@ tags: [Sungil Software Study, Blog]
 
 ![대표 이미지](/assets/img/MapExample.png)
 
-> 💡 설명: 이 이미지는 지도 생성 예시입니다. 실제 위치와 마커는 코드 실행 결과에 따라 달라집니다.
+> 💡 설명: 이 이미지는 성남시로 실행했을 때 입니다. 실제 위치와 마커는 코드에 따라 달라집니다.
 
 ---
 
